# HSim

./: .gitignore  CMakeLists.txt  README.md  a.txt  imgui.ini  package-lock.json  test.vdb  todo.md  writer.vdb
HSimulator/: CMakeLists.txt  main.cpp  test.cpp
HSimulator/GUI/: Shader.h  camera.cpp  camera.h  input.h  orbit_camera.cpp  orbit_camera.h  render_window.cpp  render_window.h  simulator.cpp  simulator.h
HSimulator/IO/: obj_reader.cpp  obj_reader.h  vdbwriter.h
HSimulator/app/: app.cpp  app.h  mtx.cpp  mtx.h
HSimulator/config/: app_config.h  configs.h  numerical_config.h
HSimulator/examples/: CMakeLists.txt
HSimulator/renderer/: render_params.h  renderer.cpp  renderer.h  renderer_frame.h  shader.h
HSimulator/resources/shaders/: basic.fs  basic.vs  camera.fs  camera.vs  frag.glsl  line.fs  line.vs  linefield.fs  linefield.vs  point.fs  point.vs  points.vs  vert.glsl
HSimulator/scene/: buffer.cpp  color.h  game_object.cpp  game_object.h  graphics_buffer.cpp  graphics_buffer.h  graphics_object.cpp  graphics_object.h  graphics_objects.h  helper_object.cpp  helper_object.h  material.cpp  material.h  mesh.cpp  mesh.h  renderable.cpp  renderable.h  scene_graph.cpp  scene_graph.h
HSimulator/scene/graphics_objects/: aabb3_graphics_object.cpp  aabb3_graphics_object.h  arrow_graphics_object.cpp  arrow_graphics_object.h  box3_graphics_object.cpp  box3_graphics_object.h  box3_graphics_objects.h  bvh3_graphics_object.cpp  bvh3_graphics_object.h  cylinder_graphics_object.cpp  cylinder_graphics_object.h  graphics_object.cpp  graphics_object.h  grid_graphics_object.cpp  grid_graphics_object.h  ground_helper_graphics_object.cpp  ground_helper_graphics_object.h  line_helper_graphics_object.cpp  line_helper_graphics_object.h  sphere3_graphics_object.cpp  sphere3_graphics_object.h  triangle_mesh3_graphics_object.cpp  triangle_mesh3_graphics_object.h  trianglej_mesh3_graphics_object.cpp
HSimulator/simulator/: simulator.cpp  simulator.h  simulator_frame.cpp  simulator_frame.h  solvers.h
HSimulator/simulator/solvers/: euler_fluid_solver.cpp  euler_fluid_solver.h  frame.cpp  frame.h  jacobi_pressure_solver.cpp  jacobi_pressure_solver.h  naive_fluid_solver.cpp  naive_fluid_solver.h  naive_smoke_solver.cpp  naive_smoke_solver.h  naive_solver.cpp  naive_solver.h  smoke_solver.cpp  smoke_solver.h  solver.cpp  solver.h
HSimulator/tests/: CMakeLists.txt  grid_test.cpp  linearsystem_test.cpp  naive_fluid_solver_test.cpp  naive_smoke_solver_test.cpp  naive_solver_test.cpp  pressure_test.cpp  render_test.cpp  smoke_solver_test.cpp  test.cpp  triangle_mesh3_test.cpp  triangle_mesh3_test_.cpp
docs/: HSim.eapx  HSim.ldb  common.md  grids.md  install.md  math.md  todo.md
examples/: CMakeLists.txt  main.cpp  my_scalar_field2.cpp  my_scalar_field3.cpp  single_phase_grid_fluid.cpp
include/HSim/: aabb3.h  animation.h  array.h  array2.h  array3.h  bounding_box3.h  box3.h  bvh.h  bvh3.h  cell_center_scalar_grid3.h  collider3.h  color.h  common.h  cylinder.h  face_center_grid3.h  field2.h  field3.h  grid2.h  grid3.h  grid_advection_solver3.h  grid_collection.h  grid_fluid_solver3.h  hsim.h  implicit_surface3.h  linearSystem.h  lock.h  mat.h  mat33.h  mat44.h  mat_csr.h  mat_sparse.h  math_utils.h  object.h  parallel.h  plane3.h  quaternion.h  ray3.h  scalar_field2.h  scalar_field3.h  scalar_grid2.h  (+16 more)
include/HSim/io/: writevdb.h
src/: box3.cpp  grid_fluid_solver3.cpp  lock.cpp  main.cpp  my_scalar_field2.cpp  my_scalar_field3.cpp  triangle_mesh3.cpp
tests/: CMakeLists.txt  README.md  test_aabb3.cpp  test_bvh3.cpp  test_face_center_grid3.cpp  test_grid_data.cpp  test_grid_fluid_solver3.cpp  test_grid_stencil.cpp  test_io_vdb.cpp  test_mat.cpp  test_mat33.cpp  test_mat44.cpp  test_math_utils.cpp  test_parallel.cpp  test_quaterion.cpp  test_scalar_field2.cpp  test_scalar_grid3.cpp  test_surface3.cpp  test_tinyobjloader.cpp  test_transform3.cpp  test_trianglemesh3.cpp  test_vec.cpp  test_vec2.cpp  test_vec3.cpp  test_vec4.cpp
tests/benchmarks/: CMakeLists.txt  bm_grid.cpp  bm_mat.cpp  bm_sum.cpp
tools/WebViewer/: README.md  a.txt  index.html
tools/WebViewer/server/: router.js  server.js
tools/WebViewer/viewer/: index.html  main.js
tools/WebViewer/viewer/shaders/: fragment.glsl.js  vertex.glsl.js
